[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

#add to default for local testing
#default = ["local-testing"]
local-testing = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
